2009-09-22  Ludovic Marcotte  <lmarcotte@inverse.ca>

        * Updated the documentation for the Invisible -> Flagged
	mail column change.
	* SoObjects/Contacts/NGVCard+SOGo.m - better error-handling. 

2009-09-22  Cyril Robert <crobert@inverse.ca>

	* UI/Scheduler/UIxCalFolderActions.m (exportAction): Used bareFetchFields from
	SOGoAppointmentFolder instead of fetchFields from SOGoGCSFolder.

2009-09-22  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MailerUI/UIxMailListView.m (+initialize): new method
	initialized the two new global NSArray: defaultColumnOrder
	(hardcoded values), udColumnOrder (system default values).
	(-columnsDisplayOrder): we now cache the resulting set of keys. 
	We also test for the presence of invalid keys by comparing the
	configured array with the hardcoded one above.
	(-setCurrentColumn:, currentColumn): new accessors.

2009-09-21  Ludovic Marcotte  <lmarcotte@inverse.ca>

	*  SOPE/NGCards/versitCardsSaxDriver/VSSaxDriver.m
	Avoid lameness when handling QP-encoded content.

2009-09-21  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/WebServerResources/MailerUI.js (updateMailboxTreeInPage):
	we assign the "quotaIndicator" to the quota DIV and when replacing
	it, we ensure the DIV doesn't already exists.

2009-09-21  Cyril Robert <crobert@inverse.ca>

	* UI/Scheduler/UIxCalMainActions.m (displayNameForUrl:): The calendar's
	display name is extracted from the URL for web calendars.
	* UI/Scheduler/UIxCalendarProperties.m (webCalendarURL, isWebCalendar):
	Added new methods to display a web calendar's url in the properties dialog.

2009-09-21  Ludovic Marcotte  <lmarcotte@inverse.ca>

        * Updated the contact import text to be more
	precise with regard to support input formats.

2009-09-19  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoUserDefaults.m
	(-initWithTableURL:uid:fieldName:): removed the "shouldPropagete"
	parameter.
	(-primaryStoreProfile): we now propagate the values in the cache
	unconditionally.
